--- a/SASS/base/_layout.scss
+++ b/SASS/base/_layout.scss
@@ -8,7 +8,6 @@
     }
 
     &_underheader {
-
         &--underline {
             font-size: var(--fs-heading);
             color: white;
@@ -69,7 +68,6 @@
         max-width: 80rem;
     }
 
-
     &--videowrapper {
         display: flex;
         justify-content: space-between;
@@ -110,7 +108,6 @@
             border: .3rem solid var(--primary-yellow);
         }
     }
-
 }
 
 .spike_3 {
@@ -125,7 +122,6 @@
 
 .section_registration {
     height: 100vh;
-
 
     &--title {
         padding: 2.5rem 5rem;
@@ -158,16 +154,18 @@
     }
 
     &--inputs {
-        display: flex;
-        // width: 100%;
-        flex-direction: column;
+        // display: flex;
+        // // width: 100%;
+        // align-items: flex-start;
+        // flex-direction: column;
         margin-left: 5rem;
 
         &_name {
-            display: flex;
+            display: block;
             justify-self: flex-end;
             margin-bottom: 2rem;
             padding: 1rem .5rem;
+            padding-right: 4rem;
             font-size: var(--fs-text);
 
             &-text {
@@ -184,8 +182,9 @@
 
         &_class {
             margin-bottom: 2rem;
-            display: block;
+            display: flex;
             padding: 1rem .5rem;
+            padding-right: 4rem;
             font-size: var(--fs-text);
 
             &-text {
@@ -204,6 +203,7 @@
             margin-bottom: 2rem;
             display: block;
             padding: 1rem .5rem;
+            padding-right: 4rem;
             font-size: var(--fs-text);
 
             &-text {
@@ -251,6 +251,7 @@
         justify-content: flex-end;
         // flex-direction: row;
         margin-right: 40rem;
+        margin-bottom: 40rem;
 
         &-regisvg {
             // justify-content: flex-end;
@@ -259,5 +260,4 @@
             width: 50rem;
         }
     }
-
 }
